# calculator2

./: CMakeLists.txt  README.md  SP_Aux.c  SP_Aux.h  SP_Stack.c  SP_Stack.h  SP_Stack_UnitTest.c  common.h  main.c  makefile  tests.sh
expected/: expected1.out  expected2.out
tests/: test1.in  test2.in
